--- a/index.css
+++ b/index.css
@@ -1,105 +1,103 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #24272e;
-    color: white;
-
+  background-color: #24272e;
+  color: white;
 }
 
 header {
-    background: white;
-    padding: 20px;
+  background: white;
+  padding: 20px;
 }
 
 header > h1 {
-    color: #25272E;
-    text-align: center;
-    font-family: Asap,sans-serif;
+  color: #25272e;
+  text-align: center;
+  font-family: Asap, sans-serif;
 }
 
-.scoreBoard{
-    border: 3px solid white;
-    border-radius: 5px;
-    text-align: center;
-    width: 200px;
-    margin: 20px auto;
-    font-size: 46px;
-    padding: 15px 20px;
-    font-family: Asap, sans-serif;
-    position: relative;
+.scoreBoard {
+  border: 3px solid white;
+  border-radius: 5px;
+  text-align: center;
+  width: 200px;
+  margin: 20px auto;
+  font-size: 46px;
+  padding: 15px 20px;
+  font-family: Asap, sans-serif;
+  position: relative;
 }
 
 .badge {
-    background: #E2584D;
-    color: white;
-    font-size: 14px;
-    padding: 2px 10px;
-    font-family: Asap,sans-serif;
+  background: #e2584d;
+  color: white;
+  font-size: 14px;
+  padding: 2px 10px;
+  font-family: Asap, sans-serif;
 }
 
-#user-label{
-    position: absolute;
-    top: 30px;
-    left: -25px;
+#user-label {
+  position: absolute;
+  top: 30px;
+  left: -25px;
 }
 
-#comp-label{
-    position: absolute;
-    top: 30px;
-    right: -27px;
+#comp-label {
+  position: absolute;
+  top: 30px;
+  right: -27px;
 }
 
 .result {
-    font-size: 40px;
+  font-size: 40px;
 }
 
 .result > p {
-    text-align: center;
-    font-family: Asap,sans-serif;
-    font-weight: bold;
+  text-align: center;
+  font-family: Asap, sans-serif;
+  font-weight: bold;
 }
 
 .choices {
-    text-align: center ;
-    margin-top: 50px;
+  text-align: center;
+  margin-top: 50px;
 }
 
 .choice {
-    display: inline-block;
-    border: 4px solid white;
-    margin: 0 20px;
-    border-radius: 50%;
-    padding: 10px;
-    transition: all 0.3s ease;
+  display: inline-block;
+  border: 4px solid white;
+  margin: 0 20px;
+  border-radius: 50%;
+  padding: 10px;
+  transition: all 0.3s ease;
 }
 
 .choice:hover {
-    cursor: pointer;
-    background: #33354b;
+  cursor: pointer;
+  background: #33354b;
 }
 
-#action-message{
-    text-align: center;
-    font-family: Asap,sans-serif;
-    font-weight: bold ;
-    font-size: 25px;
-    margin-top: 22px;
-
+#action-message {
+  text-align: center;
+  font-family: Asap, sans-serif;
+  font-weight: bold;
+  font-size: 25px;
+  margin-top: 22px;
 }
 
-.green-glow{
-    border: 4px solid rgb(52, 197, 52);
-    box-shadow: 0 0 10px green;
+.green-glow {
+  border: 4px solid rgb(52, 197, 52);
+  box-shadow: 0 0 10px green;
 }
-.red-glow{
-    border: 4px solid rgb(197, 52, 52);
-    box-shadow: 0 0 10px red;
+.red-glow {
+  border: 4px solid rgb(197, 52, 52);
+  box-shadow: 0 0 10px red;
 }
-.gray-glow{
-    border: 4px solid #58585a;
-    box-shadow: 0 0 10px #25292b;
+.gray-glow {
+  border: 4px solid #58585a;
+  box-shadow: 0 0 10px #25292b;
 }
